syntax = "proto3";

package wkt_repeated;

option go_package = "xgo/tests/pb/pbref";

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

//import "tests/proto/module/external.proto";

import "tests/proto/cases/references/private.proto";

import "proto/json.proto";

message WKTRepeated1 {
  // Cases for Enum
  //
  repeated private.Enum1 f_enum_number1 = 1 [ (json.field) = {
    reference: { repeated: { elem: { enum: { codec: Number } } } }
  } ];
  repeated private.Enum1 f_enum_number_string1 = 2 [ (json.field) = {
    reference: { repeated: { elem: { enum: { codec: NumberString } } } }
  } ];
  repeated private.Enum1 f_enum_string1 = 3 [ (json.field) = {
    reference: { repeated: { elem: { enum: { codec: String } } } }
  } ];

  // Cases for google.protobuf.Any
  //
  repeated google.protobuf.Any f_any_native1 = 4 [ (json.field) = {
    reference: { repeated: { elem: { any: { codec: Object } } } }
  } ];
  repeated google.protobuf.Any f_any_proto1  = 5 [ (json.field) = {
    reference: { repeated: { elem: { any: { codec: Proto } } } }
  } ];

  // Cases for google.protobuf.Duration
  //
  repeated google.protobuf.Duration f_duration_native1 = 11 [ (json.field) = {
    reference: { repeated: { elem: { duration: { codec: Object } } } }
  } ];
  repeated google.protobuf.Duration f_duration_string1 = 12 [ (json.field) = {
    reference: { repeated: { elem: { duration: { codec: String } } } }
  } ];

  repeated google.protobuf.Duration f_duration_nanosecond1 = 13 [ (json.field) = {
    reference: { repeated: { elem: { duration: { codec: Nanosecond } } } }
  } ];
  repeated google.protobuf.Duration f_duration_nanosecond_string1 = 14 [ (json.field) = {
    reference: { repeated: { elem: { duration: { codec: NanosecondString } } } }
  } ];

  repeated google.protobuf.Duration f_duration_microsecond1 = 15 [ (json.field) = {
    reference: { repeated: { elem: { duration: { codec: Microsecond } } } }
  } ];
  repeated google.protobuf.Duration f_duration_microsecond_string1 = 16 [ (json.field) = {
    reference: { repeated: { elem: { duration: { codec: MicrosecondString } } } }
  } ];

  repeated google.protobuf.Duration f_duration_millisecond1 = 17 [ (json.field) = {
    reference: { repeated: { elem: { duration: { codec: Millisecond } } } }
  } ];
  repeated google.protobuf.Duration f_duration_millisecond_string1 = 18 [ (json.field) = {
    reference: { repeated: { elem: { duration: { codec: MillisecondString } } } }
  } ];

  repeated google.protobuf.Duration f_duration_second1 = 19 [ (json.field) = {
    reference: { repeated: { elem: { duration: { codec: Second } } } }
  } ];
  repeated google.protobuf.Duration f_duration_second_string1 = 20 [ (json.field) = {
    reference: { repeated: { elem: { duration: { codec: SecondString } } } }
  } ];

  repeated google.protobuf.Duration f_duration_minute1 = 21 [ (json.field) = {
    reference: { repeated: { elem: { duration: { codec: Minute } } } }
  } ];
  repeated google.protobuf.Duration f_duration_minute_string1 = 22 [ (json.field) = {
    reference: { repeated: { elem: { duration: { codec: MinuteString } } } }
  } ];

  repeated google.protobuf.Duration f_duration_hour1 = 23 [ (json.field) = {
    reference: { repeated: { elem: { duration: { codec: Hour } } } }
  } ];
  repeated google.protobuf.Duration f_duration_hour_string1 = 24 [ (json.field) = {
    reference: { repeated: { elem: { duration: { codec: HourString } } } }
  } ];

  // Cases for google.protobuf.Timestamp
  //
  repeated google.protobuf.Timestamp f_timestamp_native1 = 31 [ (json.field) = {
    reference: { repeated: { elem: { timestamp: { codec: Object } } } }
  } ];
  repeated google.protobuf.Timestamp f_timestamp_time_layout1 = 32 [ (json.field) = {
    reference: { repeated: { elem: { timestamp: { codec: TimeLayout, layout: { golang: "2006-01-02T15:04:05Z07:00" } } } } }
  } ];

  repeated google.protobuf.Timestamp f_timestamp_unix_nano1 = 33 [ (json.field) = {
    reference: { repeated: { elem: { timestamp: { codec: UnixNano } } } }
  } ];
  repeated google.protobuf.Timestamp f_timestamp_unix_nano_string1 = 34 [ (json.field) = {
    reference: { repeated: { elem: { timestamp: { codec: UnixNanoString } } } }
  } ];

  repeated google.protobuf.Timestamp f_timestamp_unix_micro1 = 35 [ (json.field) = {
    reference: { repeated: { elem: { timestamp: { codec: UnixMicro } } } }
  } ];
  repeated google.protobuf.Timestamp f_timestamp_unix_micro_string1 = 36 [ (json.field) = {
    reference: { repeated: { elem: { timestamp: { codec: UnixMicroString } } } }
  } ];

  repeated google.protobuf.Timestamp f_timestamp_unix_milli1 = 37 [ (json.field) = {
    reference: { repeated: { elem: { timestamp: { codec: UnixMilli } } } }
  } ];
  repeated google.protobuf.Timestamp f_timestamp_unix_milli_string1 = 38 [ (json.field) = {
    reference: { repeated: { elem: { timestamp: { codec: UnixMilliString } } } }
  } ];

  repeated google.protobuf.Timestamp f_timestamp_unix_sec1 = 39 [ (json.field) = {
    reference: { repeated: { elem: { timestamp: { codec: UnixSec } } } }
  } ];
  repeated google.protobuf.Timestamp f_timestamp_unix_sec_string1 = 40 [ (json.field) = {
    reference: { repeated: { elem: { timestamp: { codec: UnixSecString } } } }
  } ];
}
