syntax = "proto3";

package set_common;

option go_package = "xgo/tests/pb/pbsets";

//import "google/protobuf/any.proto";
//import "google/protobuf/duration.proto";
//import "google/protobuf/timestamp.proto";

//import "tests/proto/module/external.proto";

import "proto/json.proto";

enum Enum1 {
  Zero  = 0;
  One   = 2;
  Two   = 3;
  Three = 5;
  Four  = 6;
  Five  = 7;
  Six   = 9;
  Seven = 11;
  Eight = 12;
  Nine  = 15;
  Ten   = 17;
}

// MessageWKT1 used tests cases in this file.
message Message1 {
    message Embed1 {
      message Embed2 {
        string f_string1 = 1 [ (json.field) = { } ];
        string f_string2 = 2 [ (json.field) = { } ];
        string f_string3 = 3 [ (json.field) = { } ];
      }
      string f_string1 = 1 [ (json.field) = { } ];
      string f_string2 = 2 [ (json.field) = { } ];
      string f_string3 = 3 [ (json.field) = { } ];
    }
  string f_string1 = 1 [ (json.field) = { } ];
  string f_string2 = 2 [ (json.field) = { } ];
  string f_string3 = 3 [ (json.field) = { } ];
}

